afternoon changes- tables added for the page

--- a/test.html
+++ b/test.html
@@ -61,7 +61,32 @@
 		<!-- vertical end-->
     			<!-- body start-->	
     			<div class="col-2-3">
-					<div class="alert"><h3>Groups</h3></div> 
+					<div class="alert"><h3>Groups</h3></div>
+					<div class="container-fluid"> 
+					<div class="table-responsive">   
+						<table class="table">
+							<tbody>
+      							<tr class="success"><td>Name:</td><td>Group1</td></tr>
+      							<tr class="danger"><td>Name:</td><td>Group2</td></tr>
+      							<tr class="info"><td>Name:</td><td>Group3</td></tr>
+      						</tbody>
+						</table>
+						<table class="table">
+							<tbody>
+      							<tr class="success"><td>Name:</td><td>Group1</td></tr>
+      							<tr class="danger"><td>Name:</td><td>Group2</td></tr>
+      							<tr class="info"><td>Name:</td><td>Group3</td></tr>
+      						</tbody>
+						</table>
+						<table class="table">
+							<tbody>
+      							<tr class="success"><td>Name:</td><td>Group1</td></tr>
+      							<tr class="danger"><td>Name:</td><td>Group2</td></tr>
+      							<tr class="info"><td>Name:</td><td>Group3</td></tr>
+      						</tbody>
+						</table>
+					</div>
+					</div>
 					<ul class="pagination">
     						<ul class="nav nav-pills">
     							<li class="active"><a href="#">1</a></li>
